force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_InvitationEmailBounceReason__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_InvitationEmailBounceReason__c</fullName>
    <label>Invitation Email Bounce Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>