force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_InvitationEmailStatus__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_InvitationEmailStatus__c</fullName>
    <label>Invitation Email Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>