force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_InvitationEmailStatusDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_InvitationEmailStatusDate__c</fullName>
    <label>Invitation Email Status Date</label>
    <type>DateTime</type>
</CustomField>